@@ -2,7 +2,7 @@
 # refractiveindex.info database is in the public domain
 # copyright and related rights waived via CC0 1.0
 
-REFERENCES: "R. H. French et al., Optical properties of materials for concentrator photovoltaic systems, 2009 34th IEEE Photovoltaic Specialists Conference (PVSC), 2009, pp. 000394-000399, <a href=\"https://doi.org/10.1109/PVSC.2009.5411657\">doi: 10.1109/PVSC.2009.5411657</a>"
+REFERENCES: "R. H. French, J. M. Rodríguez-Parada, M. K. Yang, R. A. Derryberry, M. F. Lemon, M. J. Brown, C. R. Haeger, S. L. Samuels, E. C. Romano, R. E. Richardson. Optical properties of materials for concentrator photovoltaic systems, <a href=\"https://doi.org/10.1109/PVSC.2009.5411657\">2009 34th IEEE Photovoltaic Specialists Conference (PVSC), 2009, pp. 000394-000399</a>"
 COMMENTS: "Kapton HN from DuPont Electronic Technologies"
 DATA: 
   - type: tabulated n
