@@ -2,7 +2,7 @@
 # refractiveindex.info database is in the public domain
 # copyright and related rights waived via CC0 1.0
 
-REFERENCES: "Kawka, P.A., Buckius, R.O. Optical Properties of Polyimide Films in the Infrared. International Journal of Thermophysics 22, 517–534 (2001). <a href=\"https://doi.org/10.1023/A:1010797620483\">https://doi.org/10.1023/A:1010797620483</a>"
+REFERENCES: "P.A. Kawka, R.O. Buckius. Optical Properties of Polyimide Films in the Infrared. <a href=\"https://doi.org/10.1023/A:1010797620483\"><i>Int. J. Thermophys.</i> <b>22</b>, 517–534 (2001)</a>"
 COMMENTS: "Fourier transform infrared (FTIR) spectroscopy is used to measure the bidirectional reflectivity of polyimide films on gold substrates in the infrared. The optical constants of cured polyimide are
 determined in the infrared region using a Lorentz model to characterize the absorption bands."
 DATA: 
