@@ -2,7 +2,7 @@
 # refractiveindex.info database is in the public domain
 # copyright and related rights waived via CC0 1.0
 
-REFERENCES: "Kumar, Vijay & Goyal, Parveen & Gupta, Renu & Kumar, Shyam. (2014). Tailoring of optical band gap and refractive index of heat treated Kapton-H Polyimide. Advances in Applied Science Research. <a href=\"https://www.researchgate.net/publication/268367040\">https://www.researchgate.net/publication/268367040</a>"
+REFERENCES: "V. Kumar, P. Goyal, R. Gupta, S. Kumar. Tailoring of optical band gap and refractive index of heat treated Kapton-H Polyimide. <a href=\"https://www.imedpub.com/abstract/tailoring-of-optical-band-gap-and-refractive-index-of-heat-treated-kaptonh-polyimide-12997.html\"><i>Adv. Appl. Sci. Res.</i> <b>2</b> 79-85 <2011)</a>"
 COMMENTS: "Kapton-H polyimide "
 DATA: 
   - type: tabulated n
