@@ -2,7 +2,7 @@
 # refractiveindex.info database is in the public domain
 # copyright and related rights waived via CC0 1.0
 
-REFERENCES: "Sahin, S., Nahar, N.K. & Sertel, K. Dielectric Properties of Low-Loss Polymers for mmW and THz Applications. J Infrared Milli Terahz Waves 40, 557–573 (2019). <a href=\"https://doi.org/10.1007/s10762-019-00584-2\">https://doi.org/10.1007/s10762-019-00584-2</a>"
+REFERENCES: "S. Sahin, N. K. Nahar, K. Sertel. Dielectric properties of low-loss polymers for mmW and THz Applications. <a href=\"https://doi.org/10.1007/s10762-019-00584-2\"><i>J. Infrared Millim. Terahertz Waves</i> <b>40</b>, 557–573 (2019)</a>"
 COMMENTS: "125-μm-thick Kapton HN general purpose polyimide film sample provided by DuPont"
 DATA: 
   - type: tabulated nk
