@@ -128,4 +128,3 @@ DATA:
         142.8571 0.0085
         153.8462 0.0092
         166.6667 0.0041
-
